--- a/index.html
+++ b/index.html
@@ -6,5 +6,10 @@
 <body>
 <h1> Anuvadati</h1>
 </body>
-
+    <nav>
+        <a href="/Home/">Home</a> |
+        <a href="/About/">About Us</a> |
+        <a href="/Galary/">Galary</a> |
+        <a href="/Contact/">Contact US</a>
+    </nav>
 </html> 
