--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
 <h1> Anuvadati</h1>
 </body>
     <nav>
-        <a href="/Home/">Home</a> |
-        <a href="/About/">About Us</a> |
-        <a href="/Galary/">Galary</a> |
-        <a href="/Contact/">Contact US</a>
+        <a href="/Home.html">Home</a> |
+        <a href="/About.html">About Us</a> |
+        <a href="/Galary.html">Galary</a> |
+        <a href="/Contact.html">Contact US</a>
     </nav>
 </html> 
