--- a/About.html
+++ b/About.html
@@ -7,9 +7,9 @@
 <h1> Anuvadati-About US </h1>
 </body>
     <nav>
-        <a href="learning/Home.html">Home</a> |
-        <a href="learning/About.html">About Us</a> |
-        <a href="learning/Galary.html">Galary</a> |
-        <a href="learning/Contact.html">Contact US</a>
+        <a href="index.html">Home</a> |
+        <a href="About.html">About Us</a> |
+        <a href="Galary.html">Galary</a> |
+        <a href="Contact.html">Contact US</a>
     </nav>
 </html> 
