--- a/About.html
+++ b/About.html
@@ -8,7 +8,7 @@
     <nav>
         <a href="index.html">Home</a> |
         <a href="About.html">About Us</a> |
-        <a href="Galary.html">Galary</a> |
+        <a href="Gallery.html">Gallery</a> |
         <a href="Contact.html">Contact US</a>
     </nav>
 </body>
