--- a/Gallery.html
+++ b/Gallery.html
@@ -36,7 +36,7 @@
         <nav>
         <a href="index.html">Home</a> |
         <a href="About.html">About Us</a> |
-        <a href="Gallery.html">Galary</a> |
+        <a href="Gallery.html">Gallery</a> |
         <a href="Contact.html">Contact US</a>
         </nav>
     </header>
