--- a/About.html
+++ b/About.html
@@ -2,14 +2,50 @@
 <html>
 <head>
     <title>Anuvadatii-About US</title>
+    <style>
+        body 
+        {
+          background-color: #000000;
+        }
+        header 
+        {
+          text-align: center;
+          padding: 3px;
+          background-color: #000000;
+          color: white;
+        }
+        footer
+        {
+          text-align: center;
+          padding: 3px;
+          background-color: #000000;
+          color: white;
+        }
+        nav
+        {
+          text-align: center;
+          padding: 3px;
+          background-color: #888888;
+          color: white;
+        }
+    </style> 
 </head>
 <body>
-    <h1> Anuvadati-About US </h1>
-    <nav>
+    <header>
+        <a href="index.html"> <img src="media/anuvadati - Copy.PNG"> </a>
+        <nav>
         <a href="index.html">Home</a> |
         <a href="About.html">About Us</a> |
         <a href="Gallery.html">Gallery</a> |
         <a href="Contact.html">Contact US</a>
-    </nav>
+        </nav>
+    </header>
+
+
+    <footer><hr>
+        <p>Author: Gaurav Shukla<br>
+        <a href="mailto:grshukla101@gmail.com">Gaurav Shukla</a></p>
+    </footer>
+    
 </body>
 </html> 
