--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>Anuvadati</title>
-        <link rel="stylesheet" href="media/style.css"></style>
+        <link rel="stylesheet" href="assets/style.css"></style>
         
     </head>
     <body>
