--- a/Gallery.html
+++ b/Gallery.html
@@ -28,6 +28,10 @@
           background-color: #888888;
           color: white;
         }
+        {
+        table, th, td {
+          border: 1px solid black;
+        }
     </style> 
 </head>
 <body>
@@ -40,7 +44,19 @@
         <a href="Contact.html">Contact US</a>
         </nav>
     </header>
-
+    <main>
+        <table>
+        <tr>
+            <th colspan="2">Fisrt Name</th>
+            <th>Mother Name</th>
+            <th>Father Name</th>
+        </tr>
+        <tr>
+            <td>Gaurav Shukla</td>
+            <td>Sunita Shukla</td>
+            <td>Sanay Shukla</td>
+        </tr>
+    </table>
 
     <footer><hr>
         <p>Author: Gaurav Shukla<br>
