--- a/Forms.html
+++ b/Forms.html
@@ -7,7 +7,17 @@
 </head>
 <body>
     <h1>Form Page </h1>
-    <form>
+    <form action="/action.php">
+        <label for="fname">First name:</label>
+        <input type="text" name="fname" id="fname"><br>
+        <label for="lname">Last name:</label>
+        <input type="text" name="lname" id="lname"><br>
+        <label for="mobile">Mobile Number:</label>
+        <input type="text" name="mobile" id="mobile"><br>
+        <label for="password">Password:</label>
+        <input type="password" name="password" id="password"><br>
+
+        <button>Submit</button>
         
     </form>
 </body>
