--- a/Forms.html
+++ b/Forms.html
@@ -7,17 +7,17 @@
 </head>
 <body>
     <h1>Form Page </h1>
-    <form action="/action.php">
-        <label for="fname">First name:</label>
-        <input type="text" name="fname" id="fname"><br>
-        <label for="lname">Last name:</label>
-        <input type="text" name="lname" id="lname"><br>
-        <label for="mobile">Mobile Number:</label>
-        <input type="text" name="mobile" id="mobile"><br>
-        <label for="password">Password:</label>
-        <input type="password" name="password" id="password"><br>
+    <form action="/Forms.html">
+        <p><label for="fname">First name:</label>
+        <input type="text" placeholder="First Name" name="fname" id="fname"></p>
+        <p><label for="lname">Last name:</label>
+        <input type="text" placeholder="Last Name" name="lname" id="lname"></p>
+        <p><label for="mobile">Mobile Number:</label>
+        <input type="text" placeholder="Mobile Number" name="mobile" id="mobile"></p>
+        <p><label for="password">Password:</label>
+        <input type="password" placeholder="Password" name="password" id="password"></p>
 
-        <button>Submit</button>
+        <button role="table">Submit</button>
         
     </form>
 </body>
